Delete logo of security
