# handler/openapi.json
@@ -1165,6 +1165,36 @@
             "bearer": []
           }
         ]
+      },
+      "delete": {
+        "summary": "Removes logo of security",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/uuid"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Ok"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "tags": [
+          "securities"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
       }
     },
     "/securities/uuid/{uuid}/markets/{marketCode}": {
